Other render slots cleared after each render #44310

Closed
opened 2015-04-08 14:27:46 +02:00 by Greg Zaal · 8 comments
Member

System Information
Windows 7 64 bit, gtx 570

Blender Version
Broken: d5f1b9c2 (multiview commit)
Worked: 74df307c (previous commit)

Short description of error
Render slots in the image editor are cleared on every render, making it impossible to compare with a previous render.

Exact steps for others to reproduce the error

  • Blend file: slot_bug.blend
  • Render to slot 1
  • Change to slot 2
  • Render again

Look back at slot 1 and see the old render is now gone

Note: I can't reproduce this in the default scene, but it consistently doesn't work with the blend file above - can't figure out why :(

**System Information** Windows 7 64 bit, gtx 570 **Blender Version** Broken: d5f1b9c2 (multiview commit) Worked: 74df307c (previous commit) **Short description of error** Render slots in the image editor are cleared on every render, making it impossible to compare with a previous render. **Exact steps for others to reproduce the error** - Blend file: [slot_bug.blend](https://archive.blender.org/developer/F159804/slot_bug.blend) - Render to slot 1 - Change to slot 2 - Render again # Look back at slot 1 and see the old render is now gone Note: I can't reproduce this in the default scene, but it consistently doesn't work with the blend file above - can't figure out why :(
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

Added subscriber: @Sergey

Added subscriber: @Sergey
Dalai Felinto was assigned by Sergey Sharybin 2015-04-08 15:43:11 +02:00

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

@venomgfx just reported that. The workaround is to manually click on pass COMBINED. Once you do that (after the first render, J, render) things work. I'm looking at the actual fix in the meantime

@venomgfx just reported that. The workaround is to manually click on pass COMBINED. Once you do that (after the first render, J, render) things work. I'm looking at the actual fix in the meantime

This issue was referenced by 5d212fb812

This issue was referenced by 5d212fb8121912cd583eadb55ea19c9bbab7b5e9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5d212fb812.

Closed by commit 5d212fb812.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#44310
No description provided.