Fix T44310: Other render slots cleared after each render